--- a/assets/less/app.less
+++ b/assets/less/app.less
@@ -61,7 +61,18 @@ code {
   .row {
     padding-bottom: 30px;
   }
-  
+  div#getapps {
+    background-color: #F6F6F6;
+    border-radius: 10px;
+    margin-bottom: 20px;
+    padding-bottom: 0;
+  }
+  div.join {
+    padding-top: 0.5em;
+    a.join-button {
+      margin-bottom: 1em;
+    }
+  }
 }
 
 .not-front {
